@@ -8,6 +8,7 @@ public class RoundRobinScheduler implements ProcessInterface {
     ArrayList<Process> processOnQueue;
     private int quantumTimer;
     public int time = 0;
+    private ArrayList<Process> processDone;
 
     public RoundRobinScheduler(ArrayList<Process> processes) {
         this.readyQueue = new ArrayList<>();
@@ -15,6 +16,7 @@ public class RoundRobinScheduler implements ProcessInterface {
         this.processOnQueue.addAll(processes);
         ganttChart = new GanttChart();
         this.quantumTime = 3;
+        this.processDone = new ArrayList<>();
 
         /*
     Todo: Refactor this code so that you can call the run method to execute the
@@ -28,7 +30,7 @@ public class RoundRobinScheduler implements ProcessInterface {
         this.processOnQueue = new ArrayList<Process>();
         this.quantumTime = 3;
         this.quantumTimer = this .quantumTime;
-
+        this.processDone = new ArrayList<>();
     }
     public RoundRobinScheduler(int time) {
         this.readyQueue = new ArrayList<>();
@@ -90,9 +92,6 @@ public class RoundRobinScheduler implements ProcessInterface {
                 .max()
                 .orElse(Integer.MIN_VALUE); // Return Integer.MIN_VALUE if the queue is empty
     }
-
-
-
     private GanttChart ganttChart;
 
 
@@ -100,51 +99,60 @@ public class RoundRobinScheduler implements ProcessInterface {
         this.time = timer;
         int quantumCounter = 0;
         //loop through the arrival then add it to the process on queue
-        System.out.println("\n#1 ready Queue: "+ readyQueue.size());
-        if (processOnQueue.isEmpty()){
+        System.out.println("\n#1 ready Queue: " + readyQueue.size());
+        if (processOnQueue.isEmpty()) {
             processOnQueue.add(readyQueue.getFirst());
             readyQueue.remove(processOnQueue.get(0));
+            processOnQueue.getFirst().addTimeStarted(timer);
         }
 
         //if quantum counter is still on going then execute task
-        if(quantumTimer > 0 ){
+        if (quantumTimer > 0) {
             //check for burst Time
-            if (processOnQueue.getFirst().getBurstTime() == processOnQueue.getFirst().getRemainingBurstTime()){
-                processOnQueue.getFirst().setTimeStarted(timer);
-            }
-            if (processOnQueue.getFirst().getBurstTime() != 0){
+//            if (processOnQueue.getFirst().getBurstTime() == processOnQueue.getFirst().getRemainingBurstTime()) {
+//                processOnQueue.getFirst().setTimeStarted(timer);
+//            }
+            if (processOnQueue.getFirst().getBurstTime() != 0) {
                 processOnQueue.getFirst().decrementBurst();
-                System.out.println("\n#1 RR Decremented Process:  "+ this.processOnQueue.getFirst().getPid());
-                System.out.println("#1 Remaining burst time: "+ this.processOnQueue.get(0).getRemainingBurstTime());
+                System.out.println("\n#1 RR Decremented Process:  " + this.processOnQueue.getFirst().getPid());
+                System.out.println("#1 Remaining burst time: " + this.processOnQueue.get(0).getRemainingBurstTime());
 
-                quantumTimer --;
-                System.out.println("Quantum Time: "+quantumTimer);
+                quantumTimer--;
+                System.out.println("Quantum Time: " + quantumTimer);
             }
-            if (processOnQueue.getFirst().getRemainingBurstTime() == 0){
-                System.out.println("#1 Process: "+ processOnQueue.getFirst().getPid() +" is Done" );
+            if (processOnQueue.getFirst().getRemainingBurstTime() == 0) {
+                System.out.println("#1 Process: " + processOnQueue.getFirst().getPid() + " is Done");
+                processDone.add(processOnQueue.getFirst());
                 processOnQueue.getFirst().setTimeEnd(timer);
                 processOnQueue.remove(processOnQueue.getFirst());
                 quantumTimer = quantumTime;
             }
 
-        }else {
+        } else {
             System.out.println("Q time stopped");
             readyQueue.addLast(processOnQueue.getFirst());// add it to the tail of the ready Queue
             processOnQueue.getFirst().addTimeEnded(timer);
+            processDone.add(processOnQueue.getFirst());
             processOnQueue.clear();
             quantumTimer = quantumTime;
             run(timer); // call the method again since the run, ran because it checks if the qT is > 0 and will skip process if not done?
         }
+    }
+    public boolean processDoneIsEmpty(){
+        return this.processDone.isEmpty();
+    }
 
-        //if quatum time runs out add it to the last
-
-
-        }
+    public ArrayList<Process> getProcessDone() {
+        return processDone;
+    }
 
     public void addToqueue(ArrayList <Process> processes){
         this.readyQueue = processes;
     }
     public ArrayList<Process> getGanttChartArray() {
        return ganttChart.getProcesses();
+    }
+    public void clearProcessDone(){
+        processDone.clear();
     }
 }
